--- a/tlektes/tlektesdeployment.yaml
+++ b/tlektes/tlektesdeployment.yaml
@@ -1,11 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: seytech
   name: tlektes-deployment
   labels:
     app: seytech
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: seytech
@@ -17,5 +18,9 @@ spec:
       containers:
       - name: web
       image: kiamol/ch02-whoami
+      resources:
+        limits:
+          memory: "128Mi"
+          cpu: "500m"
       ports:
         - containerPort: 80
