--- a/sanji/pod-deployment-sanji.yaml
+++ b/sanji/pod-deployment-sanji.yaml
@@ -18,6 +18,7 @@ spec:
       - name: myapp
         image: nginx
         resources:
+          limits:
           memory: "120Mi"
           CPU: "500m"
         ports:
